[package]
name = "ace-attorney-discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
regex = "1.6.0"
tokio = { version = "1.21.2", features = ["full"] }
config = { version = "0.13.1", features = ["yaml"] }
[dependencies.pyo3]
version = "0.17.2"
features = ["auto-initialize"]
